removed unnecessary code

--- a/pom.xml
+++ b/pom.xml
@@ -101,47 +101,47 @@
             <id>hibernate-create-classes</id>
             <build>
                 <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>hibernate3-maven-plugin</artifactId>
-                        <version>2.2</version>
-                        <executions>
-                            <execution>
-                                <id>tablakbol_osztalyokat</id>
-                                <phase>generate-sources</phase>
-                                <goals>
-                                    <goal>hbm2java</goal>
-                                </goals>
-                                <configuration>
-                                    <components>
-                                        <component>
-                                            <name>hbm2java</name>
-                                            <outputDirectory>src/main/java</outputDirectory>
-                                            <implementation>jdbcconfiguration</implementation>
-                                        </component>
-                                    </components>
-                                    <componentProperties>
-                                        <revengfile>/src/main/resources/hbm2java/model.reveng.xml</revengfile>
-                                        <propertyfile>/src/main/resources/hbm2java/hibernate.properties</propertyfile>
-                                        <jdk5>true</jdk5>
-                                        <ejb3>true</ejb3>
-                                    </componentProperties>
-                                </configuration>
-                            </execution>
-                        </executions>
-                        <dependencies>
-                            <dependency>
-                                <groupId>org.postgresql</groupId>
-                                <artifactId>postgresql</artifactId>
-                                <version>${version.org.postgresql}</version>
-                            </dependency>
-                            <dependency>
-                                <groupId>cglib</groupId>
-                                <artifactId>cglib-nodep</artifactId>
-                                <version>2.2.2</version>
-                            </dependency>
-                        </dependencies>
-                    </plugin>
+<!--                    <plugin>-->
+<!--                        <groupId>org.codehaus.mojo</groupId>-->
+<!--                        <artifactId>hibernate3-maven-plugin</artifactId>-->
+<!--                        <version>2.2</version>-->
+<!--                        <executions>-->
+<!--                            <execution>-->
+<!--                                <id>tablakbol_osztalyokat</id>-->
+<!--                                <phase>generate-sources</phase>-->
+<!--                                <goals>-->
+<!--                                    <goal>hbm2java</goal>-->
+<!--                                </goals>-->
+<!--                                <configuration>-->
+<!--                                    <components>-->
+<!--                                        <component>-->
+<!--                                            <name>hbm2java</name>-->
+<!--                                            <outputDirectory>src/main/java</outputDirectory>-->
+<!--                                            <implementation>jdbcconfiguration</implementation>-->
+<!--                                        </component>-->
+<!--                                    </components>-->
+<!--                                    <componentProperties>-->
+<!--                                        <revengfile>/src/main/resources/hbm2java/model.reveng.xml</revengfile>-->
+<!--                                        <propertyfile>/src/main/resources/hbm2java/hibernate.properties</propertyfile>-->
+<!--                                        <jdk5>true</jdk5>-->
+<!--                                        <ejb3>true</ejb3>-->
+<!--                                    </componentProperties>-->
+<!--                                </configuration>-->
+<!--                            </execution>-->
+<!--                        </executions>-->
+<!--                        <dependencies>-->
+<!--                            <dependency>-->
+<!--                                <groupId>org.postgresql</groupId>-->
+<!--                                <artifactId>postgresql</artifactId>-->
+<!--                                <version>${version.org.postgresql}</version>-->
+<!--                            </dependency>-->
+<!--                            <dependency>-->
+<!--                                <groupId>cglib</groupId>-->
+<!--                                <artifactId>cglib-nodep</artifactId>-->
+<!--                                <version>2.2.2</version>-->
+<!--                            </dependency>-->
+<!--                        </dependencies>-->
+<!--                    </plugin>-->
                     <plugin>
                         <artifactId>maven-clean-plugin</artifactId>
                         <version>3.1.0</version>
