--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,8 +33,8 @@ spring:
         database-platform: org.hibernate.dialect.PostgreSQLDialect
 
 server:
-    address: 0.0.0.0
-
+    port: $PORT
+    
 security:
     firebase-props:
         database-url: ${FIREBASE_DATABASE}
