--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,6 +32,9 @@ spring:
         show-sql: true
         database-platform: org.hibernate.dialect.PostgreSQLDialect
 
+server:
+    address: 0.0.0.0
+
 security:
     firebase-props:
         database-url: ${FIREBASE_DATABASE}
